# ws25-quantum-machine-learning-project

./: .gitignore  1_dataset_exploration.ipynb  2_feature_reduction.ipynb  3_encoding_circuits.ipynb  4_observables.ipynb  5_final_pipeline.ipynb  6_fast_hyperparam_search.ipynb  README.md  pyproject.toml
checkpoints/encoding_circuits/: chebyshevpqc.csv  chebyshevrx.csv  highdimencodingcircuit.csv  hubregtsenencodingcircuit.csv  multicontrolencodingcircuit.csv  paramzfeaturemap.csv  random_12081887.csv  random_14031879.csv  random_23041858.csv  random_25041900.csv  random_5121901.csv  yz_cx_encodingcircuit.csv
checkpoints/fast_hyperparam_search/: correlation.csv  search_results.csv
checkpoints/observables/: isinghamiltonian.csv  randomsummedneighbors.csv  randomsummedpairs.csv  summedneighbors.csv  summedpairs.csv  summedpaulis.csv  summedprobabilities.csv
checkpoints/observables_best/: isinghamiltonian.csv  summedneighbours.csv  summedpairs.csv  summedpaulis.csv  summedprobabilities.csv  summedsingles.csv
checkpoints/observables_optimal/: isinghamiltonian.csv  summedneighbours.csv  summedpairs.csv  summedsingles.csv
observables/: __init__.py  summed_neighbours.py  summed_pairs.py  summed_singles.py
utils/: encoding_circuits.py  fast_eval.py  observables.py  pareto_plot.py
